cambio de Home - Privacy

--- a/CreArte/Views/Home/Privacy.cshtml
+++ b/CreArte/Views/Home/Privacy.cshtml
@@ -5,5 +5,6 @@
 <h2>Privacy Policy</h2>
 <h3>Effective Date: [Insert Effective Date]</h3>
 <h4>Last Updated: [Insert Last Updated Date]</h4>
+<h5>Contact Information: [Insert Contact Information]</h5>
 <p>Use this page to detail your site's privacy policy.</p>
 <p>For more information about privacy, see <a href="https://aka.ms/aspnetcore-hsts">https://aka.ms/aspnetcore-hsts</a>.</p>
