h1 en Home - Index

--- a/CreArte/Views/Home/Index.cshtml
+++ b/CreArte/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <h4>¡Comparte tu arte con el mundo!</h4>
     <h5>¡Únete a nuestra comunidad de artistas!</h5>
     <h6>¡Descubre nuevas formas de expresión artística!</h6>
+    <h1>¡Desarrolla tus habilidades artísticas!</h1>
     <p>CreArte es un proyecto de software que busca fomentar la creatividad y el arte en la comunidad.</p>
     <p>Este proyecto está diseñado para ser una plataforma donde los usuarios pueden explorar, crear y compartir sus obras de arte.</p>
     <p>CreArte ofrece una variedad de herramientas y recursos para ayudar a los artistas a desarrollar sus habilidades y conectarse con otros creativos.</p>
