--- a/CreArte/Views/Usuarios/Index.cshtml
+++ b/CreArte/Views/Usuarios/Index.cshtml
@@ -27,7 +27,7 @@
          BARRA SUPERIOR
          ========================= -->
     <div class="ua-toolbar">
-        <h2 class="m-0">Usuarios</h2>
+        <h2 class="m-0"></h2>
 
         <div class="d-flex align-items-center gap-2">
             <!-- Rutas de acción -->
