--- a/CreArte/Views/Shared/sidebar.cshtml
+++ b/CreArte/Views/Shared/sidebar.cshtml
@@ -76,6 +76,10 @@
            class="nav-item @(currentController == "reportes" ? "is-active" : "")">
             <i class="bi bi-graph-up"></i> <span>Reportes</span>
         </a>
+        <a asp-controller="Areas" asp-action="Index"
+           class="nav-item @(currentController == "configuracion" ? "is-active" : "")">
+            <i class="bi bi-gear"></i> <span>Configuracion</span>
+        </a>
     </nav>
 </aside>
 
